# ai-research-agent-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md
agent/prompts/: research_agent.md
config/: claude_desktop_config.json
examples/: example_research_task.md
server/: pyproject.toml  requirements.txt
server/src/: __init__.py  config.py  server.py
server/src/tools/: __init__.py  code_sandbox.py  evaluator.py  rag_tool.py  web_research.py  workspace.py
